# nuopc-app-prototypes

./: .gitignore  .gitmodules  CAP.rc  CTM_GridComp.rc  GEOSCTM.rc  KNOWNPROBLEMS  Makefile  NUOPC_Generic.F90  README  README.md  advcore.F90  ctm.F90  ctmApp.F90  driver.F90  ectm.F90  extdata.F90  fvcore_layout.rc  ocn.F90  pTracers_GridComp.rc  testProtos.sh
AsyncIOBlockingProto/: Makefile  README  asyncIOApp.F90  asyncIODriver.F90  io.F90  model.F90  test.config
AsyncIONonblockingProto/: Makefile  README  asyncIOApp.F90  asyncIODriver.F90  con.F90  conn.F90  driver.config  io.F90  model.F90
AtmOcnConOptsProto/: README  atm.F90  bilinear.cfg  bilinear_mask.cfg  bilinear_nearest.cfg  bilinear_select.cfg  esm.F90  esmApp.F90  esmApp.runconfig  ocn.F90
AtmOcnConProto/: Makefile  README  atm.F90  con.F90  conn.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnCplListProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnCplSetProto/: Makefile  README  atm.F90  esm.F90  ocn.F90
AtmOcnFDSynoProto/: README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnFlexibleRunSequenceProto/: atm.F90  esm.F90  esmApp.runconfig  med.F90  ocn.F90
AtmOcnIPD01Proto/: Makefile  README  atm.F90  ocn.F90
AtmOcnIceSimpleImplicitProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  ice.F90  ocn.F90
AtmOcnImplicitProto/: README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnLndGenericCompProto/: Makefile  README  atm.F90  driverAtmOcnLnd.F90  esm.F90  lnd.F90
AtmOcnLndProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  esmApp.runconfig  lnd.F90  ocn.F90
AtmOcnLogNoneProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnMedFlexibleRunSequenceProto/: esm.F90  esmApp.runconfig  med.F90  ocn.F90
AtmOcnMedIngestFromConfigProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  esmApp.runconfig  esmAppRun.config  esmAppRun.yaml  med.F90  ocn.F90
AtmOcnMedIngestFromInternalProto/: Makefile  README  atm.F90  esm.F90  med.F90  ocn.F90
AtmOcnMedPetListProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  med.F90  ocn.F90
AtmOcnMedPetListTimescalesProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  med.F90  ocn.F90
AtmOcnMedPetListTimescalesSplitFastProto/: README  atm.F90  esm.F90  med.F90  ocn.F90
AtmOcnMedProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  med.F90  ocn.F90
AtmOcnMedTransferGridMakeMeshProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  med.F90  ocn.F90
AtmOcnMirrorFieldsNestedProto/: Makefile  README  atm.F90  esm.F90  ocn.F90
AtmOcnMirrorFieldsProto/: README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnMirrorFieldsWithNamespaceProto/: README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnPetListProto/: README  atm.F90  esm.F90  esmApp.F90  nuopc.configure  nuopcRun.config  nuopcRun.yaml  ocn.F90
AtmOcnProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  nuopc.F90  ocn.F90
AtmOcnRtmTwoTimescalesProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  ocn.F90  rtm.F90
AtmOcnScalarProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnSelectExternalProto/: Makefile  README  buildSubs.csh  buildSubs.sh  cleanSubs.csh  cleanSubs.sh  esm.F90  esm.config
AtmOcnSelectProto/: Makefile  README  atmA.F90  atmB.F90  esm.F90  esm.config  ocnA.F90  ocnB.F90
AtmOcnSimpleImplicitProto/: Makefile  README  atm.F90  esm.F90  ocn.F90
AtmOcnSyncGridProto/: README  atm.F90  esm.F90
AtmOcnTransferGridMakeMeshProto/: atm.F90  med.F90
AtmOcnTransferGridProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnTransferLocStreamProto/: README  atm.F90  esm.F90  esmApp.F90  ocn.F90
AtmOcnTransferMeshProto/: Makefile  README  atm.F90  esm.F90  esmApp.F90  fv1.9x2.5_unstructured.nc  gx3v7_unstructured.nc  ocn.F90
ComponentExplorer/: Makefile  README  explorer.config  explorerApp.F90  explorerDriver.F90  nuopcExplorer  nuopcExplorerApp.F90  nuopcExplorerDriver.F90  nuopcExplorerScript
CustomFieldDictionaryProto/: Makefile  README  driver.F90  fd.yaml  mainApp.F90  model.F90  util.F90
DriverInDriverDataDepProto/: README  atm.F90  driverChildComp.F90  driverParentComp.F90  mainApp.F90  ocn.F90
DriverInDriverProto/: Makefile  README  atm.F90  driverChildComp.F90  driverParentComp.F90  mainApp.F90  ocn.F90
DriverInDriverProtoIPDv02/: Makefile  README  atm.F90  driverChildComp.F90  driverParentComp.F90  mainApp.F90  ocn.F90
DynPhyProto/: Makefile  README  atm.F90  dyn.F90  esmApp.F90  phy.F90
ESMX_AtmOcnFortranAndCProto/: Makefile  esmxBuild.yaml  esmxRun.yaml
ESMX_AtmOcnFortranAndCProto/Catmos/: CMakeLists.txt  catmos.c
ESMX_AtmOcnFortranAndCProto/Lumo/: CMakeLists.txt  lumo.F90
ESMX_AtmOcnProto/: Makefile  README.md  esmxBuild.yaml  esmxRun.config  esmxRun.yaml  esmxRunAlt.yaml
ESMX_AtmOcnProto/Lumo/: CMakeLists.txt  Makefile  lumo.F90
ESMX_BeginnerProto/: README.md
ESMX_ExternalDriverAPIProto/: CMakeLists.txt  Makefile  README.md  buildSubs.sh  esmxBuild.yaml  esmxRun.config  esmxRun.yaml  externalApp.F90
ESMX_ExternalDriverAPIProto/Lumo/: CMakeLists.txt  lumo.F90
ESMX_ExternalDriverAPIProto/TaWaS/: tawas.F90
ESMX_NaN/: cleanSubs.sh
ESMX_SingleModelInCProto/: Makefile  esmxBuildDL.yaml  esmxRunDL.yaml
ESMX_SingleModelInCProto/SiMoCoC/: CMakeLists.txt  simococ.c
ESMX_SingleModelInFortranProto/: CMakeLists.txt  Makefile  README.md  esmxBuild.yaml  esmxBuildDL.yaml  esmxRun.yaml  esmxRunDL.yaml
ESMX_SingleModelInFortranProto/SiMoCo/: CMakeLists.txt  simoco.F90
ESMX_SingleModelInJuliaProto/: Makefile  README.md  esmxBuildDL.yaml  esmxRunDL.yaml
ESMX_SingleModelInJuliaProto/SiMoCoJulia/: CMakeLists.txt  simocojulia_cap.c  simocojulia_model.jl  simocojulia_utils.c
ESMX_SingleModelInJuliaProto/SiMoCoJulia/cmake/: FindESMF.cmake  FindJulia.cmake
ESMX_StartHereProto/: Makefile  README.md  esmxRun.yaml  esmxRunStep1.yaml  esmxRunStep2.yaml  esmxRunStep3.yaml  esmxRunStep4.yaml
GenericDriverAppProto/ATM-B/: CMakeLists.txt  atm.F90
GenericDriverAppProto/ATM-B/cmake/: FindESMF.cmake
NumetProto/LUMO/: CMakeLists.txt  lumo.F90
NumetProto/TAWAS/: CMakeLists.txt
(+246 files in other folders)
